update file ../maior_preco/Consulta.java