@@ -6,13 +6,13 @@ public class Consulta {
         return pedido.getProdutos()
                      .stream()
                      .filter(p -> p.getCategoria() == CategoriaProduto.LIVRO)
-                     .toList();
+                     .collect(Collectors.toList());
     }
 
     public static Produto obterProdutoMaiorPreco(List<Produto> produtos) {
         return produtos.stream()
                        .sorted(Comparator.comparing(Produto::getPreco).reversed())
-                       .toList()
+                       .collect(Collectors.toList()
                        .get(0);
     }
 }
